# Fire-and-Smoke-Detection-in-CCTV-Footage

./: .gitignore  alert.py  app.py  cctv.py  fire_smoke.yaml  main.py  pyproject.toml  requirements.txt  setup.py  template.py  test.py
fire_smoke_detec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fire_smoke_detection.egg-info/: PKG-INFO  SOURCES.txt
reseach/: cctv_yolo11_fire.ipynb  trials.ipynb
templates/: index.html
