[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-smoke-detec"
version = "0.0.0"
description = "A YOLOv8 + Flask project for fire, smoke, and pothole detection in CCTV footage."
authors = [
    {name = "Sunny Panchani", email = "sunnypanchani9099@gmai.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    # YOLOv8 core dependencies
    "ultralytics==8.1.22",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "opencv-python==4.9.0.80",
    "matplotlib==3.8.4",
    "pillow==10.2.0",
    "numpy==1.26.4",
    "pyyaml==6.0.1",
    "scipy>=1.4.1",
    "pandas>=1.1.4",
    "seaborn>=0.11.0",
    "tqdm>=4.64.0",
    "psutil",
    "thop>=0.1.1",
    "gitpython>=3.1.30",

    # YOLOv8 extra training utilities
    "hydra-core>=1.2.0",
    "tensorboard>=2.4.1",
    "ipython",

    # Project-specific dependencies
    "scikit-learn==1.4.2",
    "flask==3.0.3",
    "werkzeug==3.0.3",
    "flask-cors",
    "gdown",
    "requests>=2.23.0",
    "dill==0.3.5.1",
    "from-root==1.0.2",
    "notebook==7.0.0a7"
]

[tool.setuptools.packages.find]
where = ["."]
